// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render and match the snapshot 1`] = `
<header
  className="z-40 py-2 lg:p-4 lg:shadow-none shadow-md shadow-bottom bg-light-mode dark:bg-dark-mode"
>
  <div
    className="container flex items-center justify-between h-full  px-6 mx-auto text-theme-color"
  >
    <button
      aria-label="Menu"
      className="p-1 mr-5 -ml-1 rounded-md lg:hidden focus:outline-none focus:shadow-outline-green-200"
      onClick={[Function]}
    >
      <ForwardRef(SvgMenu)
        aria-hidden="true"
        className="w-6 h-6"
      />
    </button>
    <div
      className="flex justify-center flex-1 lg:mr-32"
    >
      <div
        className="relative w-full max-w-xl mr-6 focus-within:text-theme-500"
      >
         
      </div>
    </div>
    <ul
      className="flex items-center flex-shrink-0 space-x-6"
    >
      <li
        className="relative text-theme-color"
      >
        <button
          aria-haspopup="true"
          aria-label="Notifications"
          className="relative align-middle rounded-md focus:outline-none"
          onClick={[Function]}
        >
          <ForwardRef(SvgMoon)
            aria-hidden="true"
            className="w-5 h-5"
          />
          <span
            aria-hidden="true"
            className="animate-ping absolute top-0 right-0 inline-block w-3 h-3 transform translate-x-1 -translate-y-1 bg-red-600 border-2 border-white rounded-full dark:border-gray-800"
          />
        </button>
      </li>
    </ul>
  </div>
</header>
`;

exports[`<Header /> toggleDark should set dark mode when clicked 1`] = `
<header
  className="z-40 py-2 lg:p-4 lg:shadow-none shadow-md shadow-bottom bg-light-mode dark:bg-dark-mode"
>
  <div
    className="container flex items-center justify-between h-full  px-6 mx-auto text-theme-color"
  >
    <button
      aria-label="Menu"
      className="p-1 mr-5 -ml-1 rounded-md lg:hidden focus:outline-none focus:shadow-outline-green-200"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="w-6 h-6"
      >
        menu.svg
      </svg>
    </button>
    <div
      className="flex justify-center flex-1 lg:mr-32"
    >
      <div
        className="relative w-full max-w-xl mr-6 focus-within:text-theme-500"
      >
         
      </div>
    </div>
    <ul
      className="flex items-center flex-shrink-0 space-x-6"
    >
      <li
        className="relative text-theme-color"
      >
        <button
          aria-haspopup="true"
          aria-label="Notifications"
          className="relative align-middle rounded-md focus:outline-none"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5 h-5"
          >
            sun.svg
          </svg>
          <span
            aria-hidden="true"
            className="animate-ping absolute top-0 right-0 inline-block w-3 h-3 transform translate-x-1 -translate-y-1 bg-red-600 border-2 border-white rounded-full dark:border-gray-800"
          />
        </button>
      </li>
    </ul>
  </div>
</header>
`;

exports[`<Header /> toggleDark should set light mode when clicked 1`] = `
<header
  className="z-40 py-2 lg:p-4 lg:shadow-none shadow-md shadow-bottom bg-light-mode dark:bg-dark-mode"
>
  <div
    className="container flex items-center justify-between h-full  px-6 mx-auto text-theme-color"
  >
    <button
      aria-label="Menu"
      className="p-1 mr-5 -ml-1 rounded-md lg:hidden focus:outline-none focus:shadow-outline-green-200"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="w-6 h-6"
      >
        menu.svg
      </svg>
    </button>
    <div
      className="flex justify-center flex-1 lg:mr-32"
    >
      <div
        className="relative w-full max-w-xl mr-6 focus-within:text-theme-500"
      >
         
      </div>
    </div>
    <ul
      className="flex items-center flex-shrink-0 space-x-6"
    >
      <li
        className="relative text-theme-color"
      >
        <button
          aria-haspopup="true"
          aria-label="Notifications"
          className="relative align-middle rounded-md focus:outline-none"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5 h-5"
          >
            moon.svg
          </svg>
          <span
            aria-hidden="true"
            className="animate-ping absolute top-0 right-0 inline-block w-3 h-3 transform translate-x-1 -translate-y-1 bg-red-600 border-2 border-white rounded-full dark:border-gray-800"
          />
        </button>
      </li>
    </ul>
  </div>
</header>
`;
